--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'http://example.org/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
-theme = 'hugo-theme-shell'
+theme = 'hugo-theme-shell-0.1.5'
