--- a/themes/hugo-theme-shell-0.1.5/config/_default/config.toml
+++ b/themes/hugo-theme-shell-0.1.5/config/_default/config.toml
@@ -79,8 +79,8 @@ ignoreErrors = ["error-remote-getjson"]
   files = [ 
     ["multiplayer browser based game", "https://www.example.com/"],
     ["spotify seamless transitions companion app", "https://github.com/Kickblip/knit-list/"],
-    ["self driving food delivery rover", "https://golang.org/"],
-    ["this website", "/post/some-activity.md"]
+    ["self driving food delivery rover", "https://www.example.com/"],
+    ["this website", "/post/this-website.md"]
   ]
 
   [Params.Tree2]
