--- a/themes/hugo-theme-shell-0.1.5/config/_default/config.toml
+++ b/themes/hugo-theme-shell-0.1.5/config/_default/config.toml
@@ -58,7 +58,7 @@ ignoreErrors = ["error-remote-getjson"]
   I like machine learning and algorithms
   I'm currently a senior in high school
   I started coding in October 2022
-  I'm entirely self taught
+  I'm almost entirely self taught
   Here's some of the projects I've worked on...
   
   """
