--- a/themes/hugo-theme-shell-0.1.5/config/_default/config.toml
+++ b/themes/hugo-theme-shell-0.1.5/config/_default/config.toml
@@ -57,8 +57,7 @@ ignoreErrors = ["error-remote-getjson"]
   Hi, I'm Wyatt Hansen
   I like machine learning and algorithms
   I'm currently a senior in high school
-  I started coding in October 2022
-  I'm self taught
+  I started teaching myself in October 2022
   Here's some of the projects I've worked on...
   
   """
@@ -81,8 +80,8 @@ ignoreErrors = ["error-remote-getjson"]
   files = [ 
     ["multiplayer browser based game", "https://github.com/Kickblip/launch.io"],
     ["self driving food delivery rover", "https://github.com/Kickblip/delivery-robot"],
-    ["spotify beat-matched transitions app", "https://github.com/Kickblip/knit-list/"],
     ["automated tiktok video creation", "https://github.com/IP-2023/reddit-story-tiktok-bot"],
+    ["spotify beat-matching transition app", "https://github.com/Kickblip/knit-list/"],
     ["this website", "https://github.com/Kickblip/personal-website"]
   ]
 
