more tiny changes

--- a/themes/hugo-theme-shell-0.1.5/config/_default/config.toml
+++ b/themes/hugo-theme-shell-0.1.5/config/_default/config.toml
@@ -57,7 +57,7 @@ ignoreErrors = ["error-remote-getjson"]
   Hi, I'm Wyatt Hansen
   I like machine learning and algorithms
   I'm currently a senior in high school
-  I started teaching myself in October 2022
+  I started teaching myself coding in October 2022
   Here's some of the projects I've worked on...
   
   """
