--- a/themes/hugo-theme-shell-0.1.5/config/_default/config.toml
+++ b/themes/hugo-theme-shell-0.1.5/config/_default/config.toml
@@ -82,7 +82,8 @@ ignoreErrors = ["error-remote-getjson"]
     ["self driving food delivery rover", "https://github.com/Kickblip/delivery-robot"],
     ["automated tiktok video creation", "https://github.com/IP-2023/reddit-story-tiktok-bot"],
     ["spotify beat-matching transition app", "https://github.com/Kickblip/knit-list/"],
-    ["this website", "https://github.com/Kickblip/personal-website"]
+    ["3D rendering", "https://dulcet-froyo-c497b6.netlify.app/"],
+    ["this website", "https://github.com/Kickblip/personal-website"],
   ]
 
   [Params.Tree2]
